src/test/ui/traits/trait-bounds-sugar.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/trait-bounds-sugar.rs:12:5
   |
LL |     a(x);
   |     ^^-^
   |       |
   |       expected `Box<(dyn Foo + Send + 'static)>`, found `Box<(dyn Foo + Sync + 'static)>`
   |
note: function defined here
  --> $DIR/trait-bounds-sugar.rs:5:4
   |
LL | fn a(_x: Box<dyn Foo + Send>) {
   |    ^ -----------------------
help: provide an argument of the correct type
   |
LL |     a({Box<(dyn Foo + Send + 'static)>});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
